--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,11 @@ edition = "2021"
 
 [features]
 iosurface = []
-metal = ["metal"]
+metal = ["dep:metal"]
 dx11 = []
 
 [dependencies]
+futures = "0.3"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa-foundation = "0.1.0"
@@ -18,3 +19,5 @@ cocoa = "0.24"
 libc = "~0.2.33"
 objc2 = "0.3.0-beta.5"
 metal = { version = "0.27", optional = true }
+
+[dev-dependencies]
