--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ dx11 = []
 
 [dependencies]
 futures = "0.3"
+parking_lot = "0.12"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa-foundation = "0.1.0"
@@ -19,5 +20,6 @@ cocoa = "0.24"
 libc = "~0.2.33"
 objc2 = "0.3.0-beta.5"
 metal = { version = "0.27", optional = true }
+lazy_static = "1.4"
 
 [dev-dependencies]
