--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "rust-analyzer.check.features": ["d3d"],
-    "rust-analyzer.cargo.features": ["d3d"],
+    "rust-analyzer.check.features": ["dxgi"],
+    "rust-analyzer.cargo.features": ["dx11"],
 }
