--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [features]
 iosurface = []
 metal = ["dep:metal"]
-d3d = []
+dxgi = []
+dx11 = ["dxgi"]
 image = ["dep:image"]
 
 [dependencies]
