windows bitmap impl

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "rust-analyzer.check.features": ["dxgi","metal","iosurface"],
-    "rust-analyzer.cargo.features": ["dx11","metal","iosurface"],
+    "rust-analyzer.check.features": ["dxgi", "dx11", "bitmap", "metal","iosurface"],
+    "rust-analyzer.cargo.features": ["dxgi", "dx11", "bitmap", "metal","iosurface"],
 }
