--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ dx11 = ["dxgi"]
 bitmap = ["dep:bytemuck", "dep:half"]
 wgpu = []
 
-[target.'cfg(target_os = "window")'.features]
+[target.'cfg(target_os = "windows")'.features]
 bitmap = ["dx11"]
 
 [dependencies]
