--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ windows = { version = "0.52", features = [
     "Win32_System_WinRT_Graphics_Capture",
     "Win32_System_WinRT",
     "Win32_System_Com",
+    "Win32_System_Com_StructuredStorage",
+    "Win32_System_Variant",
     "Foundation",
     "Security_Authorization_AppCapabilityAccess"
 ] }
