--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,13 @@ wgpu = ["metal"]
 
 [target.'cfg(target_os = "windows")'.features]
 bitmap = ["dx11"]
+wgpu = ["dx11", "dxgi", "dep:winapi"]
 
 [dependencies]
 futures = "0.3"
 parking_lot = "0.12"
 half = { version = "2.4", optional = true }
 bytemuck = { version = "1.15", optional = true }
-wgpu = { version = "^0.19", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa-foundation = "0.1.0"
@@ -37,6 +37,7 @@ metal = { version = "0.27", optional = true }
 lazy_static = "1.4"
 core-graphics-types = "*"
 mach2 = "*"
+wgpu = { version = "^0.19", optional = true, features = ["metal", "hal"] }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.52", features = [
@@ -51,6 +52,8 @@ windows = { version = "0.52", features = [
     "Win32_Graphics_Direct3D",
     "Win32_Graphics_Direct3D10",
     "Win32_Graphics_Direct3D11",
+    "Win32_Graphics_Direct3D12",
+    "Win32_Graphics_Direct3D11on12",
     "Win32_Graphics_Dwm",
     "Win32_Graphics_Dxgi_Common",
     "Win32_Graphics_Dxgi",
@@ -70,7 +73,11 @@ windows = { version = "0.52", features = [
     "UI_Core",
     "ApplicationModel_Core",
 ] }
+wgpu = { version = "^0.19", optional = true, features = ["dx12", "hal"] }
+d3d12 = "*"
+winapi = "*"
 
 [dev-dependencies]
 tokio = { version = "*", features = ["rt", "macros", "rt-multi-thread"] }
 winit = "*"
+wgpu = "0.19"
