--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,8 @@ half = { version = "2.4", optional = true }
 bytemuck = { version = "1.15", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-cocoa-foundation = "0.1.0"
 block = "0.1.6"
-objc = "0.2.7"
-cocoa = "0.24"
+objc = { version = "0.2.7", default-features = false }
 libc = "~0.2.33"
 objc2 = "0.3.0-beta.5"
 metal = { version = "0.27", optional = true }
