--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,9 @@ half = { version = "2.4", optional = true }
 bytemuck = { version = "1.15", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-block = "0.1.6"
-objc = { version = "0.2.7", default-features = false }
+block2 = "0.5"
 libc = "~0.2.33"
-objc2 = "0.3.0-beta.5"
+objc2 = "0.5"
 metal = { version = "0.27", optional = true }
 lazy_static = "1.4"
 core-graphics-types = "0.1"
