--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ lazy_static = "1.4"
 core-graphics-types = "0.1"
 mach2 = "0.4"
 wgpu = { version = "^0.20", optional = true, features = ["metal", "hal"] }
+ash = { version = "0.38.0", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 xcb = "1.4"
@@ -91,6 +92,7 @@ windows = { version = "0.52", features = [
 wgpu = { version = "^0.20", optional = true, features = ["dx12", "hal"] }
 d3d12 = "0.20"
 winapi = { version = "0.3", optional = true }
+ash = { version = "0.38.0", optional = true }
 
 [dev-dependencies]
 futures = "0.3"
